# Robot

./: .dockerignore  .gitignore  Next_Steps.md  README.md  Random.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
Mini_Project/: README.md  assumptions_and_constraints.md  goals.md  materials.md  risks_and_unknowns.md  system_overview.md  task_split.md
Other/: Adding_CAD_FIles.md  Cleanup.md  How_to_commit.md  SOftware Steps.md
Overall-Project/: README.md  assumptions-and-constraints.md  goals.md  materials.md  next-steps.md  risks-and-unknowns.md  software-controls.md  system-architecture.md  system-overview.md  task-split.md  teensy-materials.md
Overall_Project/: Concerns.md  Ideas.md  New stuff.md  Next Steps.md  PLC_Addition.md  README.md  UBUNTUvsWINDOWS.md  assumptions_and_constraints.md  goals.md  materials.md  next-steps.md  risks_and_unknowns.md  sofware_controls.md  specs.md  specs_esp.md  specs_fixes.md  specs_ramp.md  specs_teensy.md  system_overview.md  task_split.md  teensy_materials.md
Phase0-Plan/: Materials.md  Overview.md  README.md  assumptions_and_constraints.md  goals.md  risks_and_unknowns.md  system_overview.md  task_split.md
Phase00-Plan/: Materials.md  assumptions-and-constraints.md  goals.md  system-overview.md  task-split.md
Phase01-Arm/: overview.md
Phase02-Trajectory/: materials.md  overview.md
Phase03-Optimize/: materials.md  overview.md
Phase04-Learning/: overview.md
Phase05-Vision/: overview.md
Phase06-Autonomy/: Materials.md  overview.md
src/my_arm_description/: CMakeLists.txt  package.xml
(+106 files in other folders)
